<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gym365.it.gym.MenuActivity">
    ​
    <item android:id="@+id/action_settings"   android:title="@string/action_settings"
        android:orderInCategory="1" app:showAsAction="never" />
    ​
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    ​
    <item android:id="@+id/action_about" android:title="@string/action_about"
        android:orderInCategory="2" app:showAsAction="never" />

</menu>