<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_tablas">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="44dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20dp"
        />

    <EditText
        android:id="@+id/name_table_add_table"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="25dp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/body"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20dp"
        />

    <EditText
        android:id="@+id/subtitulo_tabla"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="25dp"

        />

    <Button
        android:id="@+id/bfecha"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/fab_margin"
        android:background="@xml/borde_redondo"
        android:text="@string/day"
        android:backgroundTint="@color/colorGoldButton"
        />

    <EditText
        android:id="@+id/dia_tabla"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:clickable="true"
        android:focusable="false"
        android:inputType="date"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textSize="25dp"
        />

    <Button
        android:id="@+id/bhoraInicio"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/fab_margin"
        android:background="@xml/borde_redondo"
        android:text="@string/hour1"
        android:backgroundTint="@color/colorGoldButton"
        />

    <EditText
        android:id="@+id/hora_inicio_tabla"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:clickable="true"
        android:focusable="false"
        android:inputType="date"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textSize="25dp"

        />

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/fab_margin"
        android:background="@xml/borde_redondo"
        android:text="@string/add_exercise"
        android:onClick="addExercise"
        android:backgroundTint="@color/colorGoldButton"
        />

    <Button
        android:id="@+id/confirm"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@xml/borde_redondo"
        android:backgroundTint="@color/marron"
        android:onClick="saveTable"
        android:text="@string/confirm"
        android:textColor="@color/white"
        />

</LinearLayout>
