<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button android:id="@+id/start_route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorGoldButton"
            android:text="@string/start_route"
            android:background="@xml/borde_redondo"
            android:padding="10dp"
            android:onClick="clickStartRoute">
        </Button>

        <TextView android:id="@+id/routeName"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:backgroundTint="@color/colorPrimaryDark">
        </TextView>

        <Button android:id="@+id/end_route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorGoldButton"
            android:text="@string/end_route"
            android:onClick="clickEndRoute"
            android:background="@xml/borde_redondo"
            android:padding="10dp"
            >
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/putNameRoute"
            android:inputType="textEmailAddress"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:hint="Nombre ruta" />

        <Button
            android:id="@+id/button_okroute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:text="@string/dialog_buttonok"
            android:textColor="@color/white"
            android:visibility="invisible">
        </Button>

    </LinearLayout>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" android:id="@+id/mapfrag"
        tools:context="com.uc3m.it.mymapsexample.ActivityWithXMLMapFragment">

    </fragment>

</LinearLayout>
