<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="20dp"
                >
                <TextView
                    android:id="@+id/tablesname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textSize="40dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/us"
                    android:textColor="@color/colorPrimaryDark"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                >
                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="300dp"
                    android:src="@drawable/caleb_icono"
                    android:id="@+id/caleb"/>

                <TextView
                    android:id="@+id/description_caleb"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:gravity="center"
                    android:text="@string/caleb"
                    android:textColor="@color/colorPrimaryDark" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                >

                <ImageView
                    android:id="@+id/cesar"
                    android:layout_width="fill_parent"
                    android:layout_height="300dp"
                    android:src="@drawable/cesar_icono" />

                <TextView
                    android:id="@+id/description_cesar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:gravity="center"
                    android:text="@string/cesar"
                    android:textColor="@color/colorPrimaryDark" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                >

                <ImageView
                    android:id="@+id/jesus"
                    android:layout_width="fill_parent"
                    android:layout_height="300dp"
                    android:src="@drawable/jesus_icono" />

                <TextView
                    android:id="@+id/description_jesus"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:gravity="center"
                    android:text="@string/jesus"
                    android:textColor="@color/colorPrimaryDark" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>